--- a/ansible/playbooks/main.yaml
+++ b/ansible/playbooks/main.yaml
@@ -1,6 +1,9 @@
 ---
 - hosts: dhcp
+  vars: 
+    ansible_ssh_private_key_file: ../../.vagrant/machines/dhcp/virtualbox/private_key
   user: vagrant
   roles:
+    - users
     - config_dhcp
 ...
