--- a/ansible/playbooks/main.yaml
+++ b/ansible/playbooks/main.yaml
@@ -6,4 +6,12 @@
   roles:
     - users
     - config_dhcp
+
+- hosts: web-dns
+  vars: 
+    ansible_ssh_private_key_file: ../../.vagrant/machines/webdns/virtualbox/private_key
+  user: vagrant
+  roles:
+    - users
+    - config_dns
 ...
