--- a/ansible/playbooks/main.yaml
+++ b/ansible/playbooks/main.yaml
@@ -8,8 +8,10 @@
     - config_dhcp
 
 - hosts: web-dns
+#Archivo donde tengo variables creadas por mi que afectan a todo el playbook
   vars_files: 
     - ./variablesPlaybook.yaml
+  #Variables
   vars: 
     ansible_ssh_private_key_file: ../../.vagrant/machines/webdns/virtualbox/private_key
   user: vagrant
