--- a/ansible/playbooks/main.yaml
+++ b/ansible/playbooks/main.yaml
@@ -4,6 +4,7 @@
     ansible_ssh_private_key_file: ../../.vagrant/machines/dhcp/virtualbox/private_key
   user: vagrant
   roles:
+    - validation
     - users
     - config_dhcp
 
@@ -16,6 +17,7 @@
     ansible_ssh_private_key_file: ../../.vagrant/machines/webdns/virtualbox/private_key
   user: vagrant
   roles:
+    - validation
     - users
     - config_dns
     - config_apache
@@ -29,6 +31,7 @@
     ansible_ssh_private_key_file: ../../.vagrant/machines/apacheInt/virtualbox/private_key
   user: vagrant
   roles:
+    - validation
     - users
     - apacheInt
 ...
